[package]
name = "ahc-local-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
toml = "0.8.8"
clap = { version = "4.4.10", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
rayon = "1.8.0"
walkdir = "2.4.0"
regex = "1.7.0"
